--- a/src/MiNET/MiNET.BuilderBase/packages.config
+++ b/src/MiNET/MiNET.BuilderBase/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="log4net" version="2.0.5" targetFramework="net461" />
+  <package id="MiNET.fnbt" version="0.6.9" targetFramework="net461" />
 </packages>
