--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -16,8 +16,8 @@ UseEncryption=false
 
 motd=§6§l» §r§6gurun§7Hacking§6§l «§r
 motd-2nd=§6MiNET
-#WorldProvider=anvil
-WorldProvider=flat
+WorldProvider=anvil
+#WorldProvider=flat
 ViewDistance=11
 MaxViewDistance=11
 #MoveRenderDistance=4
@@ -28,14 +28,18 @@ GameMode=Creative
 #Difficulty=Peaceful
 #Difficulty=Easy
 #Difficulty=Normal
+CheckForSafeSpawn=true
 
-CalculateLights=false
+CalculateLights=true
 CalculateLights.MakeMovie=false
 
 # Bad light worlds
 #PCWorldFolder=D:\Development\Worlds\SkyWarsBrokenLight\SkyWars
-PCWorldFolder=D:\Development\Repos\MapsPE\sg.inca
+#PCWorldFolder=D:\Development\Repos\MapsPE\sg.inca
 #PCWorldFolder=D:\Development\Repos\MapsPE\sg.impact
+
+# TEST
+PCWorldFolder=D:\Temp\TestWorld
 
 # Cool worlds for testing
 #PCWorldFolder=D:\Downloads\KingsLanding1\KingsLanding1
