Improved spawn a bit, and fixed VoxelSniper brush so that it actually works as VS used to work. Thanks YouTube!

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -18,7 +18,7 @@ motd=§6§l» §r§6gurun§7Hacking§6§l «§r
 motd-2nd=§6MiNET
 WorldProvider=anvil
 #WorldProvider=flat
-ViewDistance=11
+ViewDistance=15
 MaxViewDistance=11
 #MoveRenderDistance=4
 #GameMode=Survival
@@ -30,7 +30,7 @@ GameMode=Creative
 #Difficulty=Normal
 CheckForSafeSpawn=true
 
-CalculateLights=true
+CalculateLights=false
 CalculateLights.MakeMovie=false
 
 # Bad light worlds
