Add missing 1.0 blocks.

--- a/src/MiNET/MiNET/MiNET.csproj
+++ b/src/MiNET/MiNET/MiNET.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Blocks\AcaciaStairs.cs" />
     <Compile Include="Blocks\ActivatorRail.cs" />
     <Compile Include="Blocks\Anvil.cs" />
+    <Compile Include="Blocks\Beacon.cs" />
     <Compile Include="Blocks\Bed.cs" />
     <Compile Include="Blocks\Beetroot.cs" />
     <Compile Include="Blocks\BirchDoor.cs" />
@@ -112,14 +113,22 @@
     <Compile Include="Blocks\Carpet.cs" />
     <Compile Include="Blocks\Carrots.cs" />
     <Compile Include="Blocks\Cauldron.cs" />
+    <Compile Include="Blocks\ChorusFlower.cs" />
+    <Compile Include="Blocks\ChorusPlant.cs" />
     <Compile Include="Blocks\Clay.cs" />
     <Compile Include="Blocks\CobblestoneWall.cs" />
     <Compile Include="Blocks\Cobweb.cs" />
     <Compile Include="Blocks\Cocoa.cs" />
     <Compile Include="Blocks\DarkOakDoor.cs" />
     <Compile Include="Blocks\DoubleRedSandstoneSlab.cs" />
+    <Compile Include="Blocks\DragonEgg.cs" />
     <Compile Include="Blocks\Dropper.cs" />
     <Compile Include="Blocks\EndBrick.cs" />
+    <Compile Include="Blocks\EnderChest.cs" />
+    <Compile Include="Blocks\EndGateway.cs" />
+    <Compile Include="Blocks\EndPortal.cs" />
+    <Compile Include="Blocks\EndRod.cs" />
+    <Compile Include="Blocks\Hopper.cs" />
     <Compile Include="Blocks\JungleDoor.cs" />
     <Compile Include="Blocks\LitRedstoneOre.cs" />
     <Compile Include="Blocks\MelonStem.cs" />
@@ -130,12 +139,15 @@
     <Compile Include="Blocks\Prismarine.cs" />
     <Compile Include="Blocks\PurPur.cs" />
     <Compile Include="Blocks\PumpkinStem.cs" />
+    <Compile Include="Blocks\PurPurStairs.cs" />
     <Compile Include="Blocks\RedSandstone.cs" />
     <Compile Include="Blocks\RedSandstoneSlab.cs" />
     <Compile Include="Blocks\RedSandstoneStairs.cs" />
     <Compile Include="Blocks\SeaLantern.cs" />
     <Compile Include="Blocks\Slime.cs" />
     <Compile Include="Blocks\SpruceDoor.cs" />
+    <Compile Include="Blocks\StainedGlass.cs" />
+    <Compile Include="Blocks\StainedGlassPane.cs" />
     <Compile Include="Blocks\StickyPiston.cs" />
     <Compile Include="Blocks\UnpoweredComparator.cs" />
     <Compile Include="Blocks\Wheat.cs" />
