Refactor damage handling.

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -68,7 +68,7 @@ PluginDirectory=../../../TestPlugin/bin/Debug;../../../MiNET.BuilderBase/bin/Deb
 #PluginDirectory=D:\Development\Other\MiNET.GameFramework\src\MiNET.GameFramework\MiNET.GameFramework.Plugin\bin\Debug;
 
 #PluginDisabled=true
-NiceLobby.Enabled=false
+#NiceLobby.Enabled=false
 #CoreCommands.Enabled=false
 BuilderBase.Enabled=false
 Pets.Enabled=false
