Fix enchanting. Fix type for map-ID in XML.

--- a/src/MiNET/MiNET.Client/server.conf
+++ b/src/MiNET/MiNET.Client/server.conf
@@ -15,3 +15,5 @@ TracePackets.Verbosity.McpeUseItem=1
 TracePackets.Verbosity.McpeResourcePackDataInfo=1
 TracePackets.Verbosity.McpeAdventureSettings=1
 TracePackets.Verbosity.McpeCommandStep=1
+TracePackets.Verbosity.McpeContainerOpen=1
+
