--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -18,7 +18,7 @@ motd=§6§l» §r§6gurun§7Hacking§6§l «§r
 motd-2nd=§6MiNET
 #WorldProvider=anvil
 WorldProvider=flat
-ViewDistance=22
+ViewDistance=11
 MaxViewDistance=11
 MoveRenderDistance=1
 #GameMode=Survival
@@ -82,6 +82,7 @@ TracePackets.Verbosity.McpeAddPlayer=0
 TracePackets.Verbosity.McpePlayerList=0
 TracePackets.Verbosity.McpeAnimate=1
 TracePackets.Verbosity.McpeInteract=1
+TracePackets.Verbosity.McpeMobArmorEquipment=1
 TracePackets.Verbosity.McpeUpdateBlock=1
 TracePackets.Verbosity.McpeUseItem=1
 TracePackets.Verbosity.McpeResourcePackDataInfo=1
