--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -70,7 +70,7 @@ PluginDirectory=../../../TestPlugin/bin/Debug;../../../MiNET.BuilderBase/bin/Deb
 #PluginDisabled=true
 #NiceLobby.Enabled=false
 #CoreCommands.Enabled=false
-BuilderBase.Enabled=false
+#BuilderBase.Enabled=false
 Pets.Enabled=false
 
 # REGEX docs! https://msdn.microsoft.com/en-us/library/az24scfc(v=vs.110).aspx
