--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -16,19 +16,20 @@ UseEncryption=false
 
 motd=§6§l» §r§6gurun§7Hacking§6§l «§r
 motd-2nd=§6MiNET
-#WorldProvider=anvil
-WorldProvider=flat
+WorldProvider=anvil
+#WorldProvider=flat
 ViewDistance=11
 MaxViewDistance=11
 MoveRenderDistance=1
-#GameMode=Survival
-GameMode=Creative
+GameMode=Survival
+#GameMode=Creative
 #GameMode=Spectator
 #GameMode=Adventure
 #Difficulty=Peaceful	
 #Difficulty=Easy
 #Difficulty=Normal
 CheckForSafeSpawn=true
+EnableBlockTicking=true
 
 CalculateLights=false
 CalculateLights.MakeMovie=false
@@ -39,7 +40,9 @@ CalculateLights.MakeMovie=false
 #PCWorldFolder=D:\Development\Repos\MapsPE\sg.impact
 
 # TEST
-PCWorldFolder=D:\Temp\TestWorld
+#PCWorldFolder=D:\Temp\TestWorld
+
+PCWorldFolder=D:\Development\Worlds\InPVP UHC Vanilla\Vanilla
 
 # Cool worlds for testing
 #PCWorldFolder=D:\Development\Worlds\SkyWarsBrokenLight\SkyWars
@@ -70,7 +73,7 @@ PluginDirectory=../../../TestPlugin/bin/Debug;../../../MiNET.BuilderBase/bin/Deb
 #PluginDisabled=true
 #NiceLobby.Enabled=false
 #CoreCommands.Enabled=false
-#BuilderBase.Enabled=false
+BuilderBase.Enabled=false
 Pets.Enabled=false
 
 # REGEX docs! https://msdn.microsoft.com/en-us/library/az24scfc(v=vs.110).aspx
@@ -80,11 +83,11 @@ TracePackets.Verbosity=0
 TracePackets.Verbosity.McpeAddEntity=0
 TracePackets.Verbosity.McpeAddPlayer=0
 TracePackets.Verbosity.McpePlayerList=0
-TracePackets.Verbosity.McpeAnimate=1
-TracePackets.Verbosity.McpeInteract=1
-TracePackets.Verbosity.McpeMobArmorEquipment=1
+TracePackets.Verbosity.McpeAnimate=0
+TracePackets.Verbosity.McpeInteract=0
+TracePackets.Verbosity.McpeMobArmorEquipment=0
 TracePackets.Verbosity.McpeUpdateBlock=1
 TracePackets.Verbosity.McpeUseItem=1
-TracePackets.Verbosity.McpeResourcePackDataInfo=1
-TracePackets.Verbosity.McpeAdventureSettings=1
+TracePackets.Verbosity.McpeResourcePackDataInfo=0
+TracePackets.Verbosity.McpeAdventureSettings=0
 TracePackets.Verbosity.McpeCommandStep=1
