--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -16,20 +16,20 @@ UseEncryption=false
 
 motd=§6§l» §r§6gurun§7Hacking§6§l «§r
 motd-2nd=§6MiNET
-WorldProvider=anvil
-#WorldProvider=flat
+#WorldProvider=anvil
+WorldProvider=flat
 ViewDistance=11
 MaxViewDistance=11
 MoveRenderDistance=1
-GameMode=Survival
-#GameMode=Creative
+#GameMode=Survival
+GameMode=Creative
 #GameMode=Spectator
 #GameMode=Adventure
 #Difficulty=Peaceful	
 #Difficulty=Easy
 #Difficulty=Normal
 CheckForSafeSpawn=true
-EnableBlockTicking=true
+EnableBlockTicking=false
 
 CalculateLights=false
 CalculateLights.MakeMovie=false
