Maps working again.

--- a/src/MiNET/MiNET.Client/server.conf
+++ b/src/MiNET/MiNET.Client/server.conf
@@ -17,4 +17,6 @@ TracePackets.Verbosity.McpeAdventureSettings=1
 TracePackets.Verbosity.McpeCommandStep=1
 TracePackets.Verbosity.McpeContainerOpen=1
 TracePackets.Verbosity.McpeAddItemEntity=1
+TracePackets.Verbosity.McpeMapInfoRequest=1
+TracePackets.Verbosity.McpeClientboundMapItemData=1
 
