--- a/src/MiNET/MiNET.Client/server.conf
+++ b/src/MiNET/MiNET.Client/server.conf
@@ -5,8 +5,9 @@
 TracePackets.Include=Mcpe.*
 TracePackets.Exclude=McpeWrapper|McpeBatch|McpeFullChunkData|McpeMoveEntity|McpeMovePlayer
 TracePackets.Verbosity=0
+TracePackets.Verbosity.McpeStartGame=1
 TracePackets.Verbosity.McpeAddEntity=0
-TracePackets.Verbosity.McpeAddPlayer=0
+TracePackets.Verbosity.McpeAddPlayer=1
 TracePackets.Verbosity.McpePlayerList=0
 TracePackets.Verbosity.McpeAnimate=1
 TracePackets.Verbosity.McpeInteract=1
