--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -3,7 +3,7 @@
 #port=19134
 
 # Throttling
-MaxNumberOfPlayers=10000
+MaxNumberOfPlayers=100
 #MaxNumberOfConcurrentConnects=1
 #InactivityTimeout=2000
 
@@ -74,7 +74,7 @@ PluginDirectory=../../../TestPlugin/bin/Debug;../../../MiNET.BuilderBase/bin/Deb
 #NiceLobby.Enabled=false
 #CoreCommands.Enabled=false
 BuilderBase.Enabled=false
-Pets.Enabled=false
+#Pets.Enabled=false
 
 # REGEX docs! https://msdn.microsoft.com/en-us/library/az24scfc(v=vs.110).aspx
 TracePackets.Include=Mcpe.*
