Add power and infinity support for bow/arrows. Still need to do knockback. Add enchanting extension methods for Items working on the extra data. First out of several extensions planned. Feedback on the approach appreciated.

--- a/src/MiNET/MiNET/MiNET.csproj
+++ b/src/MiNET/MiNET/MiNET.csproj
@@ -588,6 +588,7 @@
     <Compile Include="Utils\ConcurrentPriorityQueue.cs" />
     <Compile Include="Utils\CryptoContext.cs" />
     <Compile Include="Utils\CryptoUtils.cs" />
+    <Compile Include="Utils\EnchantingExtensions.cs" />
     <Compile Include="Utils\EntityLocations.cs" />
     <Compile Include="Utils\DedicatedThreadPool.cs" />
     <Compile Include="Utils\HighPrecisionTimer.cs" />
