--- a/src/MiNET/MiNET.Client/server.conf
+++ b/src/MiNET/MiNET.Client/server.conf
@@ -6,7 +6,8 @@ TracePackets.Include=Mcpe.*
 TracePackets.Exclude=McpeWrapper|McpeBatch|McpeFullChunkData|McpeMoveEntity|McpeMovePlayer
 TracePackets.Verbosity=0
 TracePackets.Verbosity.McpeStartGame=1
-TracePackets.Verbosity.McpeAddEntity=0
+TracePackets.Verbosity.McpeAddEntity=1
+TracePackets.Verbosity.McpeSetEntityMotion=1
 TracePackets.Verbosity.McpeAddPlayer=1
 TracePackets.Verbosity.McpePlayerList=0
 TracePackets.Verbosity.McpeAnimate=1
