--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -7,7 +7,7 @@ MaxNumberOfPlayers=100
 #MaxNumberOfConcurrentConnects=1
 #InactivityTimeout=2000
 
-#UseEncryption=false
+UseEncryption=false
 #UseEncryptionForAll=true
 #ForceOrderingForAll=false
 
@@ -16,8 +16,10 @@ MaxNumberOfPlayers=100
 
 motd=§6§l» §r§6gurun§7Hacking§6§l «§r
 motd-2nd=§6MiNET
+
 WorldProvider=anvil
 #WorldProvider=flat
+
 ViewDistance=8
 MaxViewDistance=8
 MoveRenderDistance=1
