Added experience for mining. No XP for entities and smelting yet. However, since enchanting is client-side XP can't really be used as part of the game :-(

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -44,7 +44,10 @@ CalculateLights.MakeMovie=false
 # TEST
 #PCWorldFolder=D:\Temp\TestWorld
 
-PCWorldFolder=D:\Development\Worlds\InPVP UHC Vanilla\Vanilla
+# UHC maps
+#PCWorldFolder=D:\Development\Worlds\InPVP UHC Vanilla\Vanilla
+#PCWorldFolder=D:\Development\Worlds\UHC\UHCr1000
+PCWorldFolder=D:\Development\Worlds\UHC\UHCr2000
 
 # Cool worlds for testing
 #PCWorldFolder=D:\Development\Worlds\SkyWarsBrokenLight\SkyWars
