Fix world time. New config and not started by default (old behavior).

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -32,6 +32,7 @@ GameMode=Survival
 #Difficulty=Normal
 CheckForSafeSpawn=true
 EnableBlockTicking=true
+IsWorldTimeStarted=true
 
 CalculateLights=false
 CalculateLights.MakeMovie=false
