--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -32,6 +32,7 @@ GameMode=Survival
 #Difficulty=Normal
 CheckForSafeSpawn=true
 EnableBlockTicking=true
+EnableChunkTicking=true
 IsWorldTimeStarted=true
 
 CalculateLights=false
