Fix hardening when water flow into lava. Fix entity kill so that death animation have time to play before despawn. Pickup items even when in creative. Added mutton, etc. Blacklisted MiNET banned dude. Added vanilla teleport and enchant commands.

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -23,8 +23,8 @@ WorldProvider=anvil
 ViewDistance=8
 MaxViewDistance=8
 MoveRenderDistance=1
-GameMode=Survival
-#GameMode=Creative
+#GameMode=Survival
+GameMode=Creative
 #GameMode=Spectator
 #GameMode=Adventure
 #Difficulty=Peaceful	
