--- a/src/MiNET/MiNET.Client/server.conf
+++ b/src/MiNET/MiNET.Client/server.conf
@@ -15,6 +15,7 @@ TracePackets.Verbosity.McpeAnimate=1
 TracePackets.Verbosity.McpeInteract=1
 TracePackets.Verbosity.McpeUpdateBlock=1
 TracePackets.Verbosity.McpeLevelEvent=1
+TracePackets.Verbosity.McpeEntityEvent=1
 TracePackets.Verbosity.McpePlayerAction=1
 TracePackets.Verbosity.McpeRemoveBlock=1
 TracePackets.Verbosity.McpeUseItem=1
