--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -1,4 +1,6 @@
 ﻿#DO NOT REMOVE THIS LINE - MiNET Config
+
+# Socket binding
 #ip=0.0.0.0
 #port=19134
 
@@ -24,19 +26,23 @@ ViewDistance=8
 MaxViewDistance=8
 MoveRenderDistance=1
 GameMode=Survival
+CalculateLights=false
+CalculateLights.MakeMovie=false
+
+# Gamerules
 #GameMode=Creative
 #GameMode=Spectator
 #GameMode=Adventure
 #Difficulty=Peaceful	
 #Difficulty=Easy
 #Difficulty=Normal
+#Difficulty=Hard
+#Difficulty=Hardcore
 CheckForSafeSpawn=true
 EnableBlockTicking=true
 EnableChunkTicking=true
 IsWorldTimeStarted=true
-
-CalculateLights=false
-CalculateLights.MakeMovie=false
+KeepInventory=true
 
 # Bad light worlds
 #PCWorldFolder=D:\Development\Worlds\SkyWarsBrokenLight\SkyWars
