--- a/src/MiNET/MiNET/packages.config
+++ b/src/MiNET/MiNET/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AStarNavigator" version="1.0.63" targetFramework="net461" />
   <package id="jose-jwt" version="1.9.3" targetFramework="net46" />
   <package id="LibNoise" version="0.2" targetFramework="net45" />
   <package id="log4net" version="2.0.5" targetFramework="net46" />
