WARNING: Player entity ID is no longer 0 to fix the position spamming. It is now a well defined -2 using a const in entity manager. FIX: Yaw/HeadYaw on mobs. Now a bit smoother and correct. Still might need a bit of work, but checkpointing it for this weekend is over.

--- a/src/MiNET/MiNET/MiNET.csproj
+++ b/src/MiNET/MiNET/MiNET.csproj
@@ -616,7 +616,6 @@
     <Compile Include="Utils\CryptoContext.cs" />
     <Compile Include="Utils\CryptoUtils.cs" />
     <Compile Include="Utils\EnchantingExtensions.cs" />
-    <Compile Include="Utils\EntityLocations.cs" />
     <Compile Include="Utils\DedicatedThreadPool.cs" />
     <Compile Include="Utils\HighPrecisionTimer.cs" />
     <Compile Include="Utils\MapInfo.cs" />
@@ -635,7 +634,7 @@
     <Compile Include="Utils\VarInt.cs" />
     <Compile Include="Utils\WannabeRandom.cs" />
     <Compile Include="Utils\TextUtils.cs" />
-    <Compile Include="Utils\Vector3.cs" />
+    <Compile Include="Utils\VectorHelpers.cs" />
     <Compile Include="Utils\Compression.cs" />
     <Compile Include="Utils\BlockCoordinates.cs" />
     <Compile Include="Utils\Endian.cs" />
