Add some hostile mobs. Creeper, skellies and zombidubhs. Fixed chunk-spawning for all of them, combined with passive spawning. It's getting a LOT more real now. Added sun-burn to skellies and zombie.

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -22,11 +22,11 @@ motd-2nd=§6MiNET
 WorldProvider=anvil
 #WorldProvider=flat
 
-ViewDistance=8
-MaxViewDistance=8
+ViewDistance=10
+MaxViewDistance=10
 MoveRenderDistance=1
 GameMode=Survival
-CalculateLights=false
+CalculateLights=true
 CalculateLights.MakeMovie=false
 
 # Gamerules
