Zombie ATTACK .. very fucking scary shit, they hit so hard.

--- a/src/MiNET/MiNET/MiNET.csproj
+++ b/src/MiNET/MiNET/MiNET.csproj
@@ -325,6 +325,7 @@
     <Compile Include="Effects\Weakness.cs" />
     <Compile Include="Effects\Wither.cs" />
     <Compile Include="Entities\Behaviors\EatBlockBehavior.cs" />
+    <Compile Include="Entities\Behaviors\FindAttackableTargetBehavior.cs" />
     <Compile Include="Entities\Behaviors\FollowOwnerBehavior.cs" />
     <Compile Include="Entities\Behaviors\HorseEatBlockBehavior.cs" />
     <Compile Include="Entities\Behaviors\HurtByTargetBehavior.cs" />
