Fix mob movements, and broke some.

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -26,7 +26,7 @@ ViewDistance=10
 MaxViewDistance=10
 MoveRenderDistance=1
 GameMode=Survival
-CalculateLights=true
+CalculateLights=false
 CalculateLights.MakeMovie=false
 
 # Gamerules
@@ -40,7 +40,7 @@ CalculateLights.MakeMovie=false
 #Difficulty=Hardcore
 CheckForSafeSpawn=true
 EnableBlockTicking=true
-EnableChunkTicking=true
+EnableChunkTicking=false
 IsWorldTimeStarted=true
 KeepInventory=true
 
