Virtual NBT for easier labeling of items.

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -19,18 +19,18 @@ UseEncryption=false
 motd=§6§l» §r§6gurun§7Hacking§6§l «§r
 motd-2nd=§6MiNET
 
-WorldProvider=anvil
-#WorldProvider=flat
+#WorldProvider=anvil
+WorldProvider=flat
 
 ViewDistance=10
 MaxViewDistance=10
 MoveRenderDistance=1
-GameMode=Survival
 CalculateLights=false
 CalculateLights.MakeMovie=false
 
 # Gamerules
-#GameMode=Creative
+#GameMode=Survival
+GameMode=Creative
 #GameMode=Spectator
 #GameMode=Adventure
 #Difficulty=Peaceful	
@@ -86,7 +86,7 @@ PluginDirectory=../../../TestPlugin/bin/Debug;../../../MiNET.BuilderBase/bin/Deb
 #PluginDisabled=true
 #NiceLobby.Enabled=false
 #CoreCommands.Enabled=false
-BuilderBase.Enabled=false
+#BuilderBase.Enabled=false
 #Pets.Enabled=false
 
 # REGEX docs! https://msdn.microsoft.com/en-us/library/az24scfc(v=vs.110).aspx
