--- a/src/MiNET/MiNET.Client/server.conf
+++ b/src/MiNET/MiNET.Client/server.conf
@@ -2,15 +2,18 @@
 #UseEncryption=false
 
 # REGEX docs! https://msdn.microsoft.com/en-us/library/az24scfc(v=vs.110).aspx
-TracePackets.Include=Mcpe.*
+#TracePackets.Include=Mcpe.*
 #TracePackets.Exclude=McpeWrapper|McpeBatch|McpeFullChunkData|McpeMoveEntity|McpeMovePlayer
 TracePackets.Exclude=McpeWrapper|McpeBatch|McpeFullChunkData|McpeMovePlayer
 TracePackets.Verbosity=0
 TracePackets.Verbosity.McpeStartGame=1
-TracePackets.Verbosity.McpeAddEntity=0
-TracePackets.Verbosity.McpeSetEntityMotion=0
+TracePackets.Verbosity.McpeAdventureSettings=1
 TracePackets.Verbosity.McpeAddPlayer=1
+TracePackets.Verbosity.McpeAddEntity=0
+TracePackets.Verbosity.McpeAddItemEntity=0
+TracePackets.Verbosity.McpeSetEntityMotion=0
 TracePackets.Verbosity.McpePlayerList=0
+TracePackets.Verbosity.McpeContainerSetContent=0
 TracePackets.Verbosity.McpeAnimate=1
 TracePackets.Verbosity.McpeInteract=1
 TracePackets.Verbosity.McpeUpdateBlock=1
@@ -20,10 +23,9 @@ TracePackets.Verbosity.McpePlayerAction=1
 TracePackets.Verbosity.McpeRemoveBlock=1
 TracePackets.Verbosity.McpeUseItem=1
 TracePackets.Verbosity.McpeResourcePackDataInfo=0
-TracePackets.Verbosity.McpeAdventureSettings=1
+TracePackets.Verbosity.McpeAvailableCommands=0
 TracePackets.Verbosity.McpeCommandStep=1
 TracePackets.Verbosity.McpeContainerOpen=0
-TracePackets.Verbosity.McpeAddItemEntity=0
 TracePackets.Verbosity.McpeMapInfoRequest=0
 TracePackets.Verbosity.McpeClientboundMapItemData=0
 
