Updated packages for 1.1 Updated batch for length handling.

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -24,15 +24,12 @@ WorldProvider=flat
 
 ViewDistance=10
 MaxViewDistance=10
-MoveRenderDistance=1
+MoveRenderDistance=10
 CalculateLights=false
 CalculateLights.MakeMovie=false
 
 # Gamerules
-<<<<<<< Updated upstream
 #GameMode=Survival
-=======
->>>>>>> Stashed changes
 GameMode=Creative
 #GameMode=Spectator
 #GameMode=Adventure
@@ -86,8 +83,8 @@ PluginDirectory=../../../TestPlugin/bin/Debug;../../../MiNET.BuilderBase/bin/Deb
 
 #PluginDirectory=D:\Development\Other\MiNET.GameFramework\src\MiNET.GameFramework\MiNET.GameFramework.Plugin\bin\Debug;
 
-#PluginDisabled=true
-NiceLobby.Enabled=false
+PluginDisabled=true
+#NiceLobby.Enabled=false
 #CoreCommands.Enabled=false
 BuilderBase.Enabled=false
 Pets.Enabled=false
