--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -24,7 +24,7 @@ WorldProvider=flat
 
 ViewDistance=10
 MaxViewDistance=10
-MoveRenderDistance=10
+MoveRenderDistance=1
 CalculateLights=false
 CalculateLights.MakeMovie=false
 
@@ -83,7 +83,7 @@ PluginDirectory=../../../TestPlugin/bin/Debug;../../../MiNET.BuilderBase/bin/Deb
 
 #PluginDirectory=D:\Development\Other\MiNET.GameFramework\src\MiNET.GameFramework\MiNET.GameFramework.Plugin\bin\Debug;
 
-PluginDisabled=true
+#PluginDisabled=true
 #NiceLobby.Enabled=false
 #CoreCommands.Enabled=false
 BuilderBase.Enabled=false
