Fix suffocation. Should be transparency check, not solid.

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -19,8 +19,8 @@ UseEncryption=false
 motd=§6§l» §r§6gurun§7Hacking§6§l «§r
 motd-2nd=§6MiNET
 
-#WorldProvider=anvil
-WorldProvider=flat
+WorldProvider=anvil
+#WorldProvider=flat
 
 ViewDistance=10
 MaxViewDistance=10
@@ -55,9 +55,10 @@ KeepInventory=true
 # UHC maps
 #PCWorldFolder=D:\Development\Worlds\InPVP UHC Vanilla\Vanilla
 #PCWorldFolder=D:\Development\Worlds\UHC\UHCr1000
-PCWorldFolder=D:\Development\Worlds\UHC\UHCr2000
+#PCWorldFolder=D:\Development\Worlds\UHC\UHCr2000
 
 # Cool worlds for testing
+PCWorldFolder=D:\Development\Worlds\TerrainControlGenerated
 #PCWorldFolder=D:\Development\Worlds\SkyWarsBrokenLight\SkyWars
 #PCWorldFolder=D:\Downloads\KingsLanding1\KingsLanding1
 #PCWaterOffset=30
